--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ord Mirror</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ord Mirror</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 </head>
 <body>
-  <div class="app-container">
-    <textarea id="codeInput" placeholder="Paste your p5.js, HTML, or SVG code here"></textarea>
-    <button onclick="showCode()">Show Code</button>
-    <div id="codeDisplay" class="code-display"></div>
-  </div>
-  <script src="script.js"></script>
+    <canvas id="matrix-bg"></canvas>
+    <div id="wrapper">
+        <h1>Ord Mirror</h1>
+        <div id="input-area">
+            <input type="text" id="url-input" placeholder="Enter URL or code here">
+            <select id="content-type">
+                <option value="image">Image</option>
+                <option value="html">HTML</option>
+                <option value="svg">SVG</option>
+                <option value="p5">p5.js</option>
+            </select>
+            <button onclick="previewContent()">Preview</button>
+        </div>
+        <div id="content-viewer"></div>
+        <div id="links">
+            <a href="https://Ordinals.com" target="_blank">Ordinals.com</a>
+            <a href="https://Ord.io" target="_blank">Ord.io</a>
+        </div>
+    </div>
+    <script src="matrix.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
