--- a/index.html
+++ b/index.html
@@ -1,34 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ord Mirror</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HTML Inscription Preview</title>
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #121212;
+      color: #ffffff;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    textarea {
+      margin-bottom: 20px;
+      width: 100%;
+      height: 50vh;
+      border: none;
+      border-radius: 5px;
+      background-color: #333;
+      color: #fff;
+    }
+
+    .submit {
+      padding: 12px 24px;
+      border: none;
+      border-radius: 5px;
+      background-color: #007bff;
+      color: #ffffff;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .submit:hover {
+      background-color: #0056b3;
+    }
+
+    footer {
+      text-align: center;
+      color: #333;
+    }
+
+    footer a {
+      color: #333;
+    }
+
+    footer a:hover {
+      color: #0088cc;
+    }
+
+    @media screen and (max-width: 768px) {
+      .container {
+        padding: 20px 10px;
+      }
+
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      textarea {
+        height: 60vh;
+      }
+    }
+  </style>
+  <script>
+    window.addEventListener("DOMContentLoaded", (event) => {
+      document.getElementById("submit").addEventListener("click", function() {
+        const content = document.getElementById("content").value;
+
+        document.open();
+        document.write(content);
+        document.close();
+      });
+    });
+  </script>
 </head>
+
 <body>
-    <canvas id="matrix-bg"></canvas>
-    <div id="wrapper">
-        <h1>Ord Mirror</h1>
-        <div id="input-area">
-            <input type="text" id="url-input" placeholder="Enter URL or code here">
-            <select id="content-type">
-                <option value="image">Image</option>
-                <option value="html">HTML</option>
-                <option value="svg">SVG</option>
-                <option value="p5">p5.js</option>
-            </select>
-            <button onclick="previewContent()">Preview</button>
-        </div>
-        <div id="content-viewer"></div>
-        <div id="links">
-            <a href="https://Ordinals.com" target="_blank">Ordinals.com</a>
-            <a href="https://Ord.io" target="_blank">Ord.io</a>
-        </div>
-    </div>
-    <script src="matrix.js"></script>
-    <script src="script.js"></script>
+  <div class="container">
+    <h1>HTML Inscription Preview</h1>
+
+    <form>
+      <textarea id="content" rows="10" autofocus></textarea>
+      <input id="submit" class="submit" type="button" value="Preview Inscription" />
+    </form>
+
+    <!-- <footer>
+        <p>Developed by <a href="https://twitter.com/lifofifo">lifofifo</a></p>
+      </footer> -->
+  </div>
 </body>
+
 </html>
